# socks5-tune

./: .gitignore  README.md  pyproject.toml  requests.http
.ci/: Dockerfile  drone.yml  woodpecker.yml
src/socks5_tune/: main.py  model.py  routes.py  tunnel.py
tests/: test_utils.py
