[tool.poetry]
name = "socks5-tune"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12"
python-socks = {version = "^2.4", extras = ["asyncio"]}

[tool.poetry.dev-dependencies]
pytest = "^8"

[tool.poetry.scripts]
socks5-tune = 'socks5_tune.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
